@@ -49,7 +49,7 @@ gnulib_modules="
   stdarg
   stdbool
   strchrnul
-  strerror
+  strerror_r-posix
   streq
   sys_ioctl
   terminfo
